# pytest-stochastic

./: CLAUDE.md  CONTRIBUTING.md  README.md  mkdocs.yml  plan.md  pyproject.toml
.beads/: issues.jsonl  metadata.json
.github/workflows/: ci.yml  docs.yml
docs/: api.md  bounds.md  configuration.md  getting-started.md  index.md
docs/guide/: distributional-test.md  example.md  rng.md  stochastic-test.md  tune-mode.md
docs/stylesheets/: extra.css
examples/: test_ols_slope.py
src/pytest_stochastic/: __init__.py  bounds.py  decorator.py  plugin.py  runtime.py  selection.py  tune.py  types.py  validation.py
tests/: test_bounds.py  test_decorator.py  test_plugin.py  test_runtime.py  test_selection.py  test_tune.py  test_validation.py
